2012-06-12  Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/RunProcManager.cpp
	Console application termination workaround: sends
	anyway CTRL_C and CTRL_BREAK to application detected
	as windows.

2012-06-07  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h,GazeControl.h:
	added the getInfo() method.

2012-05-25  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/YarpIDL.cmake: Make IDL friendlier to use if generated code
	is being checked into version control.

2012-05-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/yarpserver/CMakeLists.txt: fix for Arch Linux build
	[thanks Jean-David Boucher]

	* src/yarpmanager/libymanager/src/localbroker.cpp: likewise

2012-05-16 Lorenzo Natale <lorenzo.natale@iit.it>
        * src/libYARP_dev/src/RemoteControlBoard: now support IEncodersTimed

2012-05-15  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/conversions.h: Fix calloc2
	macro on non-windows machines [thanks Carlo Ciliberto]

	* src/libYARP_OS/include/yarp/os/NetInt32.h,
	src/libYARP_OS/include/yarp/os/begin_pack_for_net.h,
	src/libYARP_OS/include/yarp/os/end_pack_for_net.h,
	src/libYARP_OS/src/DgramTwoWayStream.cpp: apply patch from
	Daniele Domenichelli update from using __LINUX__ to __linux__
	[thanks Daniele Domenichelli]

2012-05-15  Andrea Del Prete  <andrea.delprete@iit.it>
    * src\libYARP_math\include\yarp\math\SVD.h
    * src\libYARP_math\src\SVD.cpp 
    * src\libYARP_math\harness\svdTest.cpp
    Add methods for damped pseudo-inverse, range projection matrix, 
    nullspace projection matrix and related tests.

2012-05-14 Lorenzo Natale <lorenzo.natale@iit.it>
        * src/libYARP_dev/src/IEncodersTimedImpl.cpp: small bug 
          mapping between encoders to angles

2012-05-11  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: apply patch from Lars to fix Java bindings
	after recent reorganization of control board interfaces