@@ -1,12 +1,35 @@
-set (INCLUDES "@INCLUDES@")
-set (DEST_FILES "@DEST_FILES@")
-set (SRC_FILES "@SRC_FILES@")
-set (SRC_DIR "@SRC_DIR@")
+set(INCLUDES "@INCLUDES@")
+set(DEST_FILES "@DEST_FILES@")
+set(SRC_FILES "@SRC_FILES@")
+set(SRC_DIR "@SRC_DIR@")
+set(SRC_INDEX "@SRC_INDEX@")
+set(SRC_NAME "@SRC_NAME@")
 
-set (HEADERS "")
+file(STRINGS ${SRC_DIR}/${SRC_INDEX} index)
+
+set(UNKNOWN_HEADERS)
 foreach(inc ${INCLUDES})
-  set (HEADERS "${HEADERS}\n#include <${inc}>")
+  get_filename_component(inc_name ${inc} NAME)
+  list(FIND index ${inc_name} loc)
+  if (NOT loc EQUAL -1)
+    list(INSERT index ${loc} ${inc})
+    math(EXPR locp1 "${loc} + 1")
+    list(REMOVE_AT index ${locp1})
+  else ()
+    list(APPEND UNKNOWN_HEADERS ${inc})
+  endif ()
 endforeach()
+
+set(INCLUDES ${UNKNOWN_HEADERS})
+list(APPEND INCLUDES ${index})
+
+set(HEADERS "")
+set(HEADERS "\n#ifndef YARP_THRIFT_GENERATOR_BUNDLE_${SRC_NAME}")
+set(HEADERS "${HEADERS}\n#define YARP_THRIFT_GENERATOR_BUNDLE_${SRC_NAME}")
+foreach(inc ${INCLUDES})
+  set(HEADERS "${HEADERS}\n#include <${inc}>")
+endforeach()
+set(HEADERS "${HEADERS}\n#endif\n")
 
 foreach(dest ${DEST_FILES})
   list(GET SRC_FILES 0 src)
